Correcting spacing

--- a/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
@@ -64,7 +64,7 @@
     padding: 0
 
   .dialog-text
-    padding: 0 35px 60px 35px
+    padding: 15px 35px 60px 35px
 
   .dialog-buttons
     justify-content: space-between
@@ -99,7 +99,7 @@
 
 .manage-lib-input-wrapper
   display: flex
-  margin-top: 25px
+  margin-bottom: 15px
 
   &.kf-color
     font-size: 0
@@ -129,11 +129,13 @@ select.manage-lib-input
   width: 100%
   color: textBlackColor
   vertical-align: top
-  margin-bottom: 5px
   placeholder secondaryTextGray
 
   &:focus
     border: 1px solid blueColor
+
+textarea.manage-lib-input
+  height: 70px
 
 select.manage-lib-input
   user-select: none
@@ -155,6 +157,7 @@ select.manage-lib-input
 
 .manage-lib-slug
   display: table
+  margin-top: 5px
   margin-left: 5px
 
 .manage-lib-slug-1
@@ -553,6 +556,7 @@ button.manage-lib-delete-button
 
 .manage-lib-org-selector
   margin-top: 15px
+  margin-bottom: 15px
 
   .manage-lib-org-selector-org
     vertical-align: top
